Updating file index.html
Some changes in image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div>
-    <img src="/udemy/6.4 Motivation Meme Project/assets/images/daenerys.jpeg" alt="image">
+    <img src="daenerys.jpeg" alt="image">
     <h1>The special moment</h1>
     <p>When you find the special eggs</p>
     
